[workspace]
members = [
    "render",
    "cli",
    "commons",
    "core",
    "inline",
]

# Compile snapshot testing library "insta" with "release" flag so that it runs
# faster
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Manuel Hatzl", "Nadir Fejzić"]
description = "Unimarkup compiler written in Rust."
repository = "https://github.com/Unimarkup/unimarkup-rs"
homepage = "https://github.com/Unimarkup/unimarkup-rs"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
logid = { version = "0.8", features = ["diagnostics"] }
once_cell = "1.13.0"
clap = { version = "4.2.7", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"
