[workspace]
members = [
    "cli",
    "commons",
    "core",
    "inline",
    "parser",
    "render",
]
resolver = "2"

# Compile snapshot testing library "insta" with "release" flag so that it runs
# faster
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Manuel Hatzl", "Nadir Fejzić"]
description = "Unimarkup compiler written in Rust."
repository = "https://github.com/Unimarkup/unimarkup-rs"
homepage = "https://github.com/Unimarkup/unimarkup-rs"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
logid = { version = "0.12.1", features = ["diagnostics"] }
thiserror = "1.0"
once_cell = "1.13.0"
clap = { version = "4.2.7", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"
headless_chrome = "1.0.6"
tempfile = "3.8.0"
