[package]
name = "unimarkup"
description = "CLI for the Unimarkup compiler."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
once_cell.workspace = true
clap.workspace = true
unimarkup-core = { path = "../core/" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
