[package]
name = "unimarkup"
description = "CLI for the Unimarkup compiler."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
clap.workspace = true
unimarkup-commons = { path = "../commons/", version = "0" }
unimarkup-core = { path = "../core/", version = "0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
