[package]
name = "unimarkup-commons"
description = "Crate providing common functionalities needed in other Unimarkup crates."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
once_cell = { workspace = true, optional = true }
icu_locid = "=1.2.0"
icu_segmenter = "=1.2.0"
icu_testdata = "=1.2.0"
icu_provider = { version = "=1.2.0" }
icu_provider_blob = "=1.2.0"
icu_datagen = { version = "=1.2.5", features = ["networking"] }
regex = { version = "1.8.1", optional = true }

[features]
test_runner = ["dep:regex", "dep:once_cell"]

[dev-dependencies]
insta = {version = "1.29.0", features = ["serde"]}
