[package]
name = "unimarkup-commons"
description = "Crate providing common functionalities needed in other Unimarkup crates."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
once_cell = { workspace = true, optional = true }
icu = "=1.2.0"
zerovec = "0.9.4"
icu_provider = "=1.2.0"
icu_provider_adapters = "=1.2.0"
regex = { version = "1.8.1", optional = true }
insta = {version = "1.29.0", features = ["serde"], optional = true}
itertools = "0.11.0"

[features]
test_runner = ["dep:regex", "dep:once_cell", "dep:insta"]
