[package]
name = "unimarkup-commons"
description = "Crate providing common functionalities needed in other Unimarkup crates."
readme = "README.md"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
once_cell = { workspace = true, optional = true }
icu_properties = "1.3.2"
icu_segmenter = "1.3.0"
icu_locid = "1.3.0"
regex = { version = "1.8.1", optional = true }
insta = { version = "1.29.0", features = ["serde"], optional = true }
itertools = "0.11.0"

[features]
test_runner = ["dep:regex", "dep:once_cell", "dep:insta"]
