[package]
name = "unimarkup-core"
description = "Core of the Unimarkup compiler."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
once_cell.workspace = true
clap.workspace = true
unimarkup-render = { path = "../render/", version = "0" }
unimarkup-inline = { path = "../inline/", version = "0" }
unicode-segmentation = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0"
serde_yaml = "0.8.23"
serde_plain = "1.0.0"
strum = "0.22.0"
strum_macros = "0.22.0"
sha3 = "0.10"
hex = "0.4"

icu = { version = "=1.1.0", features = ["experimental"] }
icu_testdata = { version = "=1.1.2", default-features = false, features = ["buffer", "icu_segmenter"] }
tracing = "0.1.37"

[dev-dependencies]
insta = {version = "1.29.0", features = ["serde"]}
regex = "1.8.1"
