[package]
name = "unimarkup-core"
description = "Core of the Unimarkup compiler."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
once_cell.workspace = true
unimarkup-render = { path = "../render/", version = "0" }
unimarkup-inline = { path = "../inline/", version = "0" }
unimarkup-commons = { path ="../commons/", version = "0" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_bytes = "0.11.5"
serde_plain = "1.0.0"
strum = "0.22.0"
strum_macros = "0.22.0"
sha3 = "0.10"
hex = "0.4"

tracing = "0.1.37"

[dev-dependencies]
clap.workspace = true
insta = {version = "1.29.0", features = ["serde"]}
unimarkup-commons = { path ="../commons/", version = "0", features = ["test_runner"] }
regex = "1.8.1"
