[package]
name = "unimarkup-core"
description = "Core of the Unimarkup compiler."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name="unimarkup-core"
path="tests/tests.rs"
harness=false

[dependencies]
logid.workspace = true
thiserror.workspace = true
unimarkup-commons = { path ="../commons/", version = "0" }
unimarkup-inline = { path = "../inline/", version = "0" }
unimarkup-parser = { path = "../parser/", version = "0" }
unimarkup-render = { path = "../render/", version = "0" }

[dev-dependencies]
unimarkup-commons = { path ="../commons/", version = "0", features = ["test_runner"] }
libtest-mimic = "0.6.1"
