[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
icu_properties = "1.3.2"
icu_segmenter = "1.3.0"
icu_locid = "1.3.0"
ribbon = "0.7.0"
