[package]
name = "unimarkup-inline"
description = "Compiler for Unimarkup inline elements."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
unimarkup-commons = { path = "../commons/", version = "0" }
unicode-segmentation = "1.8.0"

[dev-dependencies]
insta = {version = "1.29.0", features = ["serde"]}
unimarkup-commons = { path ="../commons/", version = "0", features = ["test_runner"] }
serde.workspace = true
serde_yaml.workspace = true
