[package]
name = "unimarkup-inline"
description = "Compiler for Unimarkup inline elements."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name="unimarkup-inline"
path="tests/mod.rs"
harness=false

[dependencies]
logid.workspace = true
ribbon.workspace = true
unimarkup-commons = { path = "../commons/", version = "0" }
fxhash = "0.2.1"

[dev-dependencies]
unimarkup-commons = { path ="../commons/", version = "0", features = ["test_runner"] }
serde.workspace = true
serde_yaml.workspace = true
libtest-mimic = "0.6.1"
