[package]
name = "unimarkup-parser"
description = "Parser for the Unimarkup language."
readme = "README.md"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
unimarkup-inline = { path = "../inline/", version = "0" }
unimarkup-commons = { path ="../commons/", version = "0" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum = "0.22.0"
strum_macros = "0.22.0"
sha3 = "0.10"
