[package]
name = "unimarkup-render"
description = "Crate providing traits and types used for rendering Unimarkup markup."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
once_cell.workspace = true
syntect = "4.6"
