[package]
name = "unimarkup-render"
description = "Crate providing traits and types used for rendering Unimarkup markup."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logid.workspace = true
thiserror.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
unimarkup-commons = { path = "../commons/", version = "0" }
unimarkup-inline = { path = "../inline/", version = "0" }
unimarkup-parser = { path = "../parser/", version = "0" }
syntect = "5.0"
rustyscript = "0.1.1"
spreadsheet-ods = "0.17.0"
headless_chrome = "1.0.9"
tempfile = "3.8.0"
mathemascii = "0.4.0"
